fixing error img px

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="aboutMe">
                 <p>My name is Luis. I was born in San Cristobal, Venezuela, but I was raised in Puerto Ordaz. I am currently working as Business System Analyst. I currently in school to learn Software Development.</p>
                 <figure>
-                    <img class="photo" src="images/profile-picture.jpeg" alt="profile picture of Luis" width="150px" height="150px">
+                    <img class="photo" src="images/profile-picture.jpeg" alt="profile picture of Luis" width="150" height="150">
                 </figure>
             </div>
             <div>
@@ -37,7 +37,7 @@
             </div>
             <div class="city">
                 <figure>
-                    <img src="images/Flag-Venezuela.webp" alt="Venezuela Flag" width="150px">
+                    <img src="images/Flag-Venezuela.webp" alt="Venezuela Flag" width="150">
                     <figcaption>Oficial Venezuela Flag</figcaption>
                 </figure>
                 <p>Venezuela is a country of significant natural beauty and resources, characterized by its diverse landscapes and rich cultural heritage. However, it faces substantial economic and political challenges. Puerto Ordaz, a key city within Venezuela, stands out for its industrial importance, modern urban planning, and natural attractions, making it a unique blend of economic vitality and environmental beauty.</p>
