--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section class = "card">
             <h2>About Me</h2>
             <div class="aboutMe">
-                <p>My name is Luis. I was born in San Cristobal, Venezuela, but I was raised in Puerto Ordaz. I am currently working as Business System Analyst. I currently in school to learn Software Development.</p>
+                <p>My name is Luis. I was born in San Cristobal, Venezuela, but I was raised in Puerto Ordaz. I am currently working as Business System Analyst. I am in school to learn Software Development.</p>
                 <figure>
                     <img class="photo" src="images/profile-picture.jpeg" alt="profile picture of Luis" width="150" height="150">
                 </figure>
