--- a/place.html
+++ b/place.html
@@ -30,7 +30,7 @@
         </div>
         <div class="content">
             <section class="data">
-                <div class="weather-icon">
+                <div class="data-icon">
                     <h2>Data</h2>
                     <span class="weather-symbol"><img src="images/data-icon.svg" alt="Data Icon" width="50" height="50"></span>
                 </div>
@@ -48,7 +48,8 @@
             <section class="weather">
                 <div class="weather-icon">
                     <h2>Weather</h2>
-                    <span class="weather-symbol"><img src="images/weather-icon.svg" alt="weather Icon" width="50" height="50"></span>
+                    <span class="weather-symbol">⛅</span>
+                    <!-- <span class="weather-symbol"><img src="images/weather-icon.svg" alt="weather Icon" width="50" height="50"></span> -->
                 </div>
                 <ul>
                     <li>Temperature: <span id="temperature">30</span> °C</li>
