--- a/form.html
+++ b/form.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Product Review</title>
-  <link rel="stylesheet" href="/styles/form.css">
-  <script src="scripts/getdates.js" defer></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WDD 131 - Product Review - Luis Navarro Ballen</title>
+    <meta name="description" content="This is a form to review items">
+    <meta name="author" content="Luis Navarro Ballen">
+    <link rel="stylesheet" href="styles/form.css">
+    <script src="scripts/getdates.js" defer></script>
 </head>
 <body>
     <main>
@@ -42,10 +44,10 @@
             <!-- Useful Features -->
             <fieldset class="features">
                 <legend>Which features did you find useful?</legend>
-                <label for="durability"><input type="checkbox" name="durability" value="yes"> Durability</label>
-                <label for="easy-use"><input type="checkbox" name="easy-use" value="yes"> Ease of Use</label>
-                <label for="performance"><input type="checkbox" name="performance" value="yes"> Performance</label>
-                <label for="design"><input type="checkbox" name="design" value="yes"> Design</label>
+                <label for="durability"><input type="checkbox" name="durability" value="yes" id="durability"> Durability</label>
+                <label for="easy-use"><input type="checkbox" name="easy-use" value="yes" id="easy-use"> Ease of Use</label>
+                <label for="performance"><input type="checkbox" name="performance" value="yes" id="performance"> Performance</label>
+                <label for="design"><input type="checkbox" name="design" value="yes" id="design"> Design</label>
             </fieldset>
 
             <!-- Written Review -->
