--- a/review.html
+++ b/review.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Review Confirmation</title>
+  <title>WDD 131 - Review Confirmation - Luis Navarro Ballen</title>
+  <meta name="description" content="This is a form to review items">
+  <meta name="author" content="Luis Navarro Ballen">
   <link rel="stylesheet" href="styles/form.css">
   <script src="scripts/getdates.js" defer></script>
 </head>
