--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +6,7 @@
     <title>Site Plan: Vacations to Beautiful Beaches in Venezuela</title>
     <meta name="description" content="Site Plan for Vacations to Beautiful Beaches in Venezuela">
     <meta name="author" content="Luis Navarro Ballen">
-    <link rel="stylesheet" href="project/styles/siteplan.css">
+    <link rel="stylesheet" href="/project/styles/siteplan.css">
 </head>
 <body>
     <header>
@@ -53,9 +51,9 @@
     <section class="wireframe">
         <h2>Wireframe</h2>
         <p><strong>Desktop View:</strong></p>
-        <img src="project/images/desktop-wireframe.png" alt="Desktop wireframe representation">
+        <img src="/project/images/desktop-wireframe.png" alt="Desktop wireframe representation">
         <p><strong>Mobile View:</strong></p>
-        <img src="project/images/mobile-wireframe.png" alt="Mobile wireframe representation">
+        <img src="/project/images/mobile-wireframe.png" alt="Mobile wireframe representation">
     </section>
 </body>
 </html>
