--- a/project/home.html
+++ b/project/home.html
@@ -13,7 +13,9 @@
         <div class="hero-content">
             <h1>Visit beautiful beaches</h1>
             <p>Come visit us in Venezuela, there are varieties of beautiful beaches</p>
-            <button class="main-button">Contact Us</button>
+            <form action="venezuelanbeaches.html">
+                <button class="main-button" type="submit">Come to the Beach</button>
+            </form>
         </div>
     </header>
 
@@ -55,14 +57,21 @@
                 <p>Cayo Sombrero</p>
             </div>
         </div>
-          <button class="main-button">Visit these places</button>
+        <form action="venezuelanbeaches.html">
+            <button class="main-button" type="submit">Visit these places</button>
+        </form>
     </section>
 
     <section class="newsletter">
         <div class="newsletter-content">
             <h2>Don't miss amazing places that you can visit.</h2>
             <p>Subscribe to our newsletter to keep you informed of our current places, weather, and new activities.</p>
-            <button class="newsletter-button">Subscribe Here</button>
+            <strong>Email Address:</strong>
+            <label class="newsletter-label">
+                <input type="email" placeholder="Email address">
+                <button class="newsletter-button" type="submit">Subscribe Here</button>
+            </label>
+
         </div>
         <picture>
             <!-- Large image for screens 1000px and up -->
@@ -90,6 +99,7 @@
                 <p>- Diego, Explorer</p>
             </div> -->
         </div>
+        
     </section>
 
     <footer class="footer">
